Optimize size of Docker image by jlink